# environments

./: README.md
cuDSS/: .clangd  build.sh  demo03.cu
cuDSS/include/: head.cuh
cuDSS/src/: maths.cu
gcc/: README.md
strumpack-slate-gpu/: CMakeLists.txt  README.md  test_strumpack.cpp
superlu_dist on GPU/: CMakeLists.txt  README.md  test_superlu_dist.cpp
